fix(timeline): centering years on Safari

--- a/frontend/assets/css/timeline.scss
+++ b/frontend/assets/css/timeline.scss
@@ -379,8 +379,8 @@ html {
           padding: 0;
           border: 0;
           height: auto;
-          left: 50%; /* Calculates 50% of the element's width, and moves it by that */
-          transform: translateX(
+          /*left: 50%; /* Calculates 50% of the element's width, and moves it by that */
+          /*transform: translateX(
             -50%
           ); /* amount across the X-axis to the left */
           z-index: 1;
@@ -427,9 +427,9 @@ html {
             position: absolute;
             margin-bottom: 0;
             width: 100%;
-            transform: translateX(-25%);
+            transform: translateX(-50%);
             bottom: -3vw;
-            left: 0;
+            /*left: 0;*/
             text-align: center;
             span {
               opacity: 1;
